# ACT-Bench

./: .gitignore  README.md  download_generated_videos.py  pyproject.toml  run_benchmark.py
Terra/: README.md  generate.py  vllm_generate.py
Terra/checkpoints/: download_weights.sh
Terra/configs/video_refiner/: inference.yaml
Terra/video_refiner/: lr_scheduler.py  util.py
Terra/video_refiner/models/: autoencoder.py  diffusion.py
Terra/video_refiner/modules/: attention.py  ema.py  video_attention.py
Terra/video_refiner/modules/autoencoding/: temporal_ae.py
Terra/video_refiner/modules/autoencoding/regularizers/: __init__.py
Terra/video_refiner/modules/diffusionmodules/: denoiser.py  denoiser_scaling.py  discretizer.py  guiders.py  loss.py  loss_weighting.py  model.py  openaimodel.py  sampling.py  sampling_utils.py  sigma_sampling.py  util.py  video_model.py  wrappers.py
Terra/video_refiner/modules/distributions/: distributions.py
Terra/video_refiner/modules/encoders/: modules.py
Terra/vllm_impl/: modeling_llama_action.py
act_bench/: __init__.py  compute_score.py  metrics.py  model.py  utils.py
notebook/: compute_score.ipynb
scripts/: compute_score_terra_paper.sh  compute_score_terra_v2.sh  compute_score_vista_paper.sh  compute_socre_terra_paper.sh
