[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "act-bench"
version = "0.1.0"
description = "Benchmarking tool for action controllability of world models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.34.2",
    "albumentations>=1.4.17",
    "clip",
    "deepspeed>=0.15.1",
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "fvcore>=0.1.5.post20221221",
    "imageio[ffmpeg,pyav]>=2.35.1",
    "joblib>=1.4.2",
    "kornia>=0.7.3",
    "lpips>=0.1.4",
    "matplotlib>=3.9.2",
    "natsort>=8.4.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.26.1",
    "opencv-python>=4.10.0.84",
    "pymap3d>=3.1.0",
    "pytorch-lightning==2.0.1",
    "safetensors>=0.4.5",
    "scipy>=1.13.1",
    "sdata",
    "sentencepiece>=0.2.0",
    "simplejson>=3.19.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.47.0",
    "xformers>=0.0.28.post1",
    "huggingface-hub==0.25.1",
    "more-itertools==10.3.0",
    "nuscenes-devkit",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "rich==13.9.2",
    "ruff==0.8.0",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "sentry-sdk==2.16.0",
    "setproctitle==1.3.3",
    "shapely==1.8.5.post1",
    "six==1.16.0",
    "smmap==5.0.1",
    "sortedcontainers==2.4.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "tensorboard==2.18.0",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "tifffile==2024.9.20",
    "timm==1.0.9",
    "tomli==2.0.1",
    "torch-tb-profiler==0.4.3",
    "wandb>=0.18.7",
    "pandera>=0.21.1",
    "datasets>=3.1.0",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "ipykernel==6.29.5",
    "ipython>=8.30.0",
    "ipywidgets==8.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["act_bench*"]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long
    "F403",  # Unable to detect undefined names
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR2004",  # Magic value used in comparison
    "PLR0915",  # Too many statements
    "PLR0402",  # Manual from import
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
